--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -1,1 +1,32 @@
-<h1 style="width: 100%; text-align: center; margin-top: 140px; font-size: 17px;">طراحی این بخش به اتمام نرسیده است.</h1>
+<div id="home_intro">
+    <div class="shapes">
+        <span class="shape triangle"></span>
+        <span class="shape"></span>
+        <span class="shape parallelogram"></span>
+        <span class="shape circle"></span>
+        <span class="shape" style="display: none"></span>
+        <span class="shape triangle"></span>
+    </div>
+
+    <div class="title">
+        <h1>آموزش های کاملا رایگان و حرفه ای</h1>
+        <h3 style="margin-top: 15px;">
+            از ۰ تا ۱۰۰ با ویدیو های با کیفیت + سورس کد
+        </h3>
+    </div>
+
+    <!-- top courses slider -->
+
+    <div id="home-intro-search-box">
+        <div class="input input-bold">
+            <input type="text" placeholder="جست و جو کنید!">
+            <button class="submit-button">
+                <ion-icon name="search-outline"></ion-icon>
+            </button>
+        </div>
+    </div>
+
+    <a href="#home_intro" id="goto_down_button" class="btn btn-none">
+        <ion-icon name="arrow-down-outline"></ion-icon>
+    </a>
+</div>
