--- a/app/views/users/signup_with_github_finished.erb
+++ b/app/views/users/signup_with_github_finished.erb
@@ -15,7 +15,7 @@
     <% if um_used %>
         <div style="text-align: center; padding: 20px 0">
             <h3 style="text-align-center">کاربر دیگری با این ایمیل یا نام کاربری وجود دارد</h3>
-            <a href="/users/signin" style="margin-top: 10px;" class="link" dir="rtl">
+            <a href="/users/signin" style="margin-top: 30px; display: block;" class="link" dir="rtl">
                 صفحه ورود
             </a>
         </div>
