--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -3,7 +3,6 @@
 	width: 100%;
 	display: block;
 	margin: 15px 0;
-	background: #fff;
 	label{
 		top: -15px;
 	    right: 6px;
@@ -45,6 +44,26 @@
 		font-size: 12px;
 		color: #777;
 		direction: rtl;
+	}
+	&.input-bold{
+		input{
+			border: none;
+			box-shadow: 0px 0px 0px 0.5rem #ffffff14;
+			padding-left: 40px;
+		}
+		.submit-button{
+			position: absolute;
+			top: 10px;
+			left: 6px;
+			width: 30px;
+			height: 30px;
+			font-size: 20px;
+			color: #777;
+			background: transparent;
+			border: none;
+			outline: none;
+			cursor: pointer;
+		}
 	}
 }
 .selectbox{
