--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -205,6 +205,7 @@
 		direction: rtl;
 		min-height: 50px;
 		text-decoration: none;
+		padding-top: 0;
 		color: #000;
 		.sender{
 			position: absolute;
@@ -223,7 +224,8 @@
 			color: #777;
 		}
 		.content{
-			padding: 5px 10px;
+			padding: 0 10px;
+			padding-top: 15px;
 			font-size: 14px;
 			display: block;
 		}
