working on bugs | no.1

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -75,6 +75,9 @@ body {
             top: 1px;
             padding-right: 5px;
         }
+        .btn{
+            display: inline-block;
+        }
     }
 }
 #toggle_menu_button{
