--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,10 +29,8 @@
 					</div>
 				</div>
 			<% end %>
- 			<a href="<%= dashboard_new_article_url %>">
-				<div style="display: inline-block; margin-right: 10px; font-size: 30px; position: relative; top: 10px; height: 34px; cursor: pointer" class="btn-none">
-					<ion-icon style="color: #dadada;" name="add-outline"></ion-icon>
-				</div>
+			<a href="<%= dashboard_new_article_url %>" style="display: inline-block; margin-right: 10px; font-size: 30px; position: relative; top: 12px; height: 34px; cursor: pointer" class="btn-none">
+				<ion-icon style="color: #dadada;" name="add-outline"></ion-icon>
 			</a>
 		</div>
 		<div id="navbar-left">
