--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -287,3 +287,13 @@ small {
         align-items: center;
     }
 }
+.center_recaptcha{
+    height: 76px;
+    background: red;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    margin: 15px 0;
+    display: block;
+    width: max-content;
+}
