--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -36,10 +36,16 @@
 				<%= f.password_field :password_confirmation %>
 			</div>
 
-			<div class="checkbox" style="margin-right: 5px; margin-top: 10px;">
-                <%= f.label :tac, raw("من تمام <a href='/users/terms_and_conditions'>قوانین</a> این وبسایت را میپذیرم") %>
-                <%= f.check_box :accept_terms_and_conditions, :checked => false %>
-            </div>
+		 	<div style="text-align: center;">
+				<div class="checkbox" style="margin-top: 10px;">
+					<%= f.label :tac, raw("من تمام <a href='/users/terms_and_conditions'>قوانین</a> این وبسایت را میپذیرم") %>
+					<%= f.check_box :accept_terms_and_conditions, :checked => false %>
+				</div>
+			</div>
+			
+			<div class="center_recaptcha">
+				<%= render 'layouts/grecaptcha' %>
+			</div>
 
 			<% unless flash[:signup_errors_list].nil? %>
 				<% flash[:signup_errors_list].each do |e| %>
@@ -50,7 +56,7 @@
 			<% end %>
 
 			<div style="width: 100%; text-align: left;">
-				<%= f.submit 'ارسال', :class => "btn btn-primary btn-large-padding" %>
+				<%= f.submit 'ارسال', :class => "btn btn-block btn-primary btn-large-padding" %>
 			</div>
 
 			<div class="sepa"></div>
