alert changed to new alert

--- a/app/assets/stylesheets/alerts.scss
+++ b/app/assets/stylesheets/alerts.scss
@@ -24,4 +24,7 @@
     &.alert-danger{
         background: rgb(223, 14, 14);;
     }
+    &.alert-success{
+        background: rgb(6, 165, 46);
+    }
 }
