--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,16 @@
             </div>
         </div>
     <% end %>
+    <% unless flash[:new_comment_success].nil? %>
+        <div class="alert alert-success">
+            <button onclick="close_popup_alert_box(this)" class="close_button btn-none">
+                <ion-icon name="close-outline"></ion-icon>
+            </button>
+            <div class="alert_content">
+                <%= flash[:new_comment_success] %>
+            </div>
+        </div>                
+    <% end %>
     <div id="view_article">
        <% if @article.present? %>
             <div class='article_box'>
@@ -103,10 +113,6 @@
                                             <div class="item"><%= e %></div>
                                         </div>
                                     <% end %>
-                                <% end %>
-
-                                <% unless flash[:new_comment_success].nil? %>
-                                    <span class="success_message"><%= flash[:new_comment_success] %></span>
                                 <% end %>
                             </div>
 
