--- a/app/views/dashboard/new_article.html.erb
+++ b/app/views/dashboard/new_article.html.erb
@@ -20,6 +20,10 @@
                 <% end %>
             </div>
 
+            <div style="margin-bottom: 10px;">
+				<%= render 'layouts/grecaptcha' %>
+			</div>
+
             <div style="width: 100%; display: block; text-align: left;">
                 <%= f.submit 'ثبت مقاله', :class => "btn btn-primary btn-large-padding" %>
             </div>
