--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -1,15 +1,6 @@
 <div id="home_intro">
-    <div class="shapes">
-        <span class="shape triangle"></span>
-        <span class="shape"></span>
-        <span class="shape parallelogram"></span>
-        <span class="shape circle"></span>
-        <span class="shape" style="display: none"></span>
-        <span class="shape triangle"></span>
-    </div>
-
     <div class="title">
-        <h1>آموزش های کاملا رایگان و حرفه ای</h1>
+        <h1>آموزش های پروژه محور و حرفه ای</h1>
         <h3 style="margin-top: 15px;">
             از ۰ تا ۱۰۰ با ویدیو های با کیفیت + سورس کد
         </h3>
