forgot password section finished. banned users added

--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -19,7 +19,7 @@
 			<% end %>
 		<% end %>
 
-		<div style="margin-bottom: 10px;">
+		<div style="margin: 10px 0;">
 			<%= render 'layouts/grecaptcha' %>
 		</div>
 
