--- a/app/views/dashboard/user_profile.html.erb
+++ b/app/views/dashboard/user_profile.html.erb
@@ -44,6 +44,11 @@
                     <%= f.check_box :is_admin %>
                 </div>
 
+                <div class="checkbox" style="margin-right: 5px;">
+                    <%= f.label :is_banned, 'بن کردن کاربر' %>
+                    <%= f.check_box :is_banned %>
+                </div>
+
                 <% unless flash[:user_profile_errors].nil? %>
                     <% flash[:user_profile_errors].each do |e| %>
                         <div class="form_error_list">
