--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,34 +1,44 @@
 <div class="form center_form">
-	<% sended_successfully = true %>
-	
-	<% if sended_successfully %>
+	<% if flash[:forgot_password_sended_successfully].nil? == false && flash[:forgot_password_sended_successfully] %>
 		<div style="text-align: center;">
-			<h3 class="form_title">فرمواش گذرواژه</h3>
+			<h3 class="form_title">فرمواشی گذرواژه</h3>
 
 			<div style="width: 100%; display: block; margin-bottom: 10px;">
 				<%= image_tag '/images/mail_sent.svg', :style => 'width: 80px;', :alt => "mail sent" %>
 			</div>
 
-			<span dir="rtl">لینک تایید با موفقیت ارسال شد.</h3>
+			<p dir="rtl">
+				لینک حاوی تغییر گذرواژه به ایمیل شما ارسال شد.
+			</p>
 
 			<div style="width: 100%; display: block; margin-top: 18px; margin-bottom: 10px;">
 				<%= link_to 'صفحه ورود', users_signin_path, :class => "btn btn-primary btn-large-padding" %>
 			</div>
 		</div>
 	<% else %>
-		<h3 class="form_title">فرمواش گذرواژه</h3>
+		<h3 class="form_title">فرمواشی گذرواژه</h3>
 
-		<div class="input">
-			<label for="username">ایمیل شما</label>
-			<input type="text">
-		</div>
+		<%= form_with url: {:action => :submit_forgot_password}, method: :post do |f| %>
+			<div class="input">
+				<%= f.label :email, 'ایمیل شما' %>
+				<%= f.text_field :email %>
+			</div>
 
-		<!-- <div class="form_error_list">
-			<div class="item">نام کاربری یا گذرواژه شما صحیح نمی باشد</div>		
-		</div> -->
+			<% unless flash[:forgot_password_errors].nil? %>
+				<% flash[:forgot_password_errors].each do |e| %>
+						<div class="form_error_list">
+							<div class="item"><%= e %></div>
+						</div>
+				<% end %>
+			<% end %>
 
-		<div style="width: 100%; display: block; text-align: left;">
-			<button type="submit" class="btn btn-primary btn-large-padding">ارسال لینک تایید</button>
-		</div>
+			<div style="margin: 10px 0;">
+				<%= render 'layouts/grecaptcha' %>
+			</div>
+
+			<div style="width: 100%; display: block; text-align: left;">
+				<%= f.submit 'تایید', :class => "btn btn-primary btn-large-padding" %>
+			</div>
+		<% end %>
 	<% end %>
 </div>
