404, 503, 500 pages design finished. search controller added

--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -3,6 +3,7 @@
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
 <%= javascript_pack_tag 'scripts', 'data-turbolinks-track': 'load', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
+<meta name="theme-color" content="#252b33">
 <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script>
   var _paq = window._paq = window._paq || [];
