search article section finished

--- a/app/assets/stylesheets/introduction.scss
+++ b/app/assets/stylesheets/introduction.scss
@@ -27,7 +27,7 @@
             }
         }
     }
-    #home-intro-search-box {
+    .search-search-box {
         position: relative;
         left: 50%;
         transform: translate(-50%);
