--- a/app/views/dashboard/edit_profile.html.erb
+++ b/app/views/dashboard/edit_profile.html.erb
@@ -19,7 +19,7 @@
             </div>
 
             <div class="input" style="margin-right: 5px;" dir="rtl">
-                <%= f.label :bio, 'بیگرافی' %>
+                <%= f.label :bio, 'بیوگرافی' %>
                 <%= f.text_area :bio %>
             </div>
 
