--- a/app/views/dashboard/user_profile.html.erb
+++ b/app/views/dashboard/user_profile.html.erb
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="input" style="margin-right: 5px;" dir="rtl">
-                    <%= f.label :bio, 'بیگرافی' %>
+                    <%= f.label :bio, 'بیوگرافی' %>
                     <%= f.text_area :bio %>
                 </div>
 
