--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,244 +1,280 @@
-.article_box{
-	position: relative;
-	.title{
-		color: #000;
-	}
-	.cover{
-		width: 100%;
-		height: 250px;
-		&.big_cover{
-			height: 280px;
-		}
-	}
-	width: 100%;
-	.desc{
-		color: #777;
-	}
-	.footer{
-		margin-top: 4px;
-		display: block;
-		.author, .comments_count, .article_submit_time, .like_icon{
-			position: relative;
-			color: #003cff;
-			padding-right: 22px;
-			.icon{
-				position: absolute;
-				font-size: 19px;
-				right: 0;
-			}
-		}
-		.article_submit_time{
-			font-family: sans-serif;
-		}
-		.comments_count, .like_icon{
-			padding-right: 20px;
-			margin-right: 10px;
-		}
-	}
-	.hashtag{
-		position: absolute;
-		z-index: 10;
-		left: 0;
-		font-size: 13px;
-		padding: 4px 10px;
-		border-bottom-right-radius: 7px;
-		border-top-left-radius: 7px;
-		&.hashtag-primary{
-			color: #fff;
-			background-color: #003cff;
-		}
-		&.hashtag-black{
-			color: #fff;
-			background-color: #111;
-		}
-		&.hashtag-red{
-			color: #fff;
-			background-color: rgb(255, 11, 11);
-		}
-	}
-}	
-#articles_list{
-	width: 100%;
-	display: grid;
-	grid-template-columns: calc(100% / 3) calc(100% / 3 - 15px) calc(100% / 3 - 15px);
-	grid-gap: 15px;
-	direction: rtl;
+.article_box {
+    position: relative;
+    .title {
+        color: #000;
+    }
+    .cover {
+        width: 100%;
+        height: 250px;
+        &.big_cover {
+            height: 280px;
+        }
+    }
+    width: 100%;
+    .desc {
+        color: #777;
+    }
+    .footer {
+        margin-top: 4px;
+        display: block;
+        .author,
+        .comments_count,
+        .article_submit_time,
+        .like_icon {
+            position: relative;
+            color: #003cff;
+            padding-right: 22px;
+            .icon {
+                position: absolute;
+                font-size: 19px;
+                right: 0;
+            }
+        }
+        .article_submit_time {
+            font-family: sans-serif;
+        }
+        .comments_count,
+        .like_icon {
+            padding-right: 20px;
+            margin-right: 10px;
+        }
+    }
+    .hashtag {
+        position: absolute;
+        z-index: 10;
+        left: 0;
+        font-size: 13px;
+        padding: 4px 10px;
+        border-bottom-right-radius: 7px;
+        border-top-left-radius: 7px;
+        &.hashtag-primary {
+            color: #fff;
+            background-color: #003cff;
+        }
+        &.hashtag-black {
+            color: #fff;
+            background-color: #111;
+        }
+        &.hashtag-red {
+            color: #fff;
+            background-color: rgb(255, 11, 11);
+        }
+    }
 }
+
+#articles_list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: calc(100% / 3) calc(100% / 3 - 15px) calc(100% / 3 - 15px);
+    grid-gap: 15px;
+    direction: rtl;
+}
+
 @media screen and (max-width: 1100px) {
-	#articles_list{
-		grid-template-columns: calc(100% / 2) calc(100% / 2 - 10px);
-	}
+    #articles_list {
+        grid-template-columns: calc(100% / 2) calc(100% / 2 - 10px);
+    }
 }
+
 @media screen and (max-width: 720px) {
-	#articles_list{
-		grid-template-columns: 100%;
-		grid-gap: 15px;
-	}
+    #articles_list {
+        grid-template-columns: 100%;
+        grid-gap: 15px;
+    }
 }
 
-#articles_mini_list{
-	width: 100%;
-	display: grid;
-	grid-template-columns: calc(100% / 2) calc(100% / 2 - 15px);
-	grid-gap: 15px;
-	direction: rtl;
+#articles_mini_list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: calc(100% / 2) calc(100% / 2 - 15px);
+    grid-gap: 15px;
+    direction: rtl;
 }
+
 @media screen and (max-width: 1100px) {
-	#articles_mini_list{
-		grid-template-columns: calc(100%);
-		grid-gap: 0;
-	}
+    #articles_mini_list {
+        grid-template-columns: calc(100%);
+        grid-gap: 0;
+    }
 }
 
-#view_article{
-	text-align: right;
-	.article_icon_span{
-		.icon{
-			position: relative;
-			top: 4px;
-			font-size: 20px;
-		}
-		font-family: sans-serif;
-		padding-bottom: 3px;
-		margin-left: 10px;
-		color: #222;
-		&.link-danger{
-			color: rgb(255, 11, 11);
-		}
-	}
-	.author_row{
-		// remove box-shadow virtual margins...
-		width: calc(100% - 1rem);
-		margin: 20px 0;
-		margin-left: 0.5rem;
-		display: block;
-		background: #fff;
-		border-radius: 7px;
-		box-shadow: 0px 0px 0px 0.5rem rgba(255, 255, 255, 0.5);
-		padding: 10px 23px;
-		color: #000;
-		position: relative;
-		.icon{
-			position: absolute;
-			right: 0;
-			font-size: 20px;
-			display: inline-block;
-			margin-right: 13px;
-		}
-		.value{
-			padding-right: 19px;
-			display: inline-block;	
-		}
-	}
-	.content{
-		ul{
-			padding: 0 18px;
-		}
-		code{
-			width: 100%;
-			background: #252b33;
-			color: #fff;
-			padding: 10px;
-			display: block;
-			text-align: left;
-			direction: ltr;
-			border-radius: 4px;
-			margin: 5px 0;
-		}
-		padding-bottom: 5px;
-	}
-	.like_button, form{
-		display: inline-block;
-	}
-	.like_button{
-		cursor: pointer;
-		background: transparent;
-		border: none;
-	}
+#view_article {
+    text-align: right;
+    .article_icon_span {
+        .icon {
+            position: relative;
+            top: 4px;
+            font-size: 20px;
+        }
+        font-family: sans-serif;
+        padding-bottom: 3px;
+        margin-left: 10px;
+        color: #222;
+        &.link-danger {
+            color: rgb(255, 11, 11);
+        }
+    }
+    .author_row {
+        // remove box-shadow virtual margins...
+        width: calc(100% - 1rem);
+        margin: 20px 0;
+        margin-left: 0.5rem;
+        display: block;
+        background: #fff;
+        border-radius: 7px;
+        box-shadow: 0px 0px 0px 0.5rem rgba(255, 255, 255, 0.5);
+        padding: 10px 23px;
+        color: #000;
+        position: relative;
+        .icon {
+            position: absolute;
+            right: 0;
+            font-size: 20px;
+            display: inline-block;
+            margin-right: 13px;
+        }
+        .value {
+            padding-right: 19px;
+            display: inline-block;
+        }
+    }
+    .content {
+        ul {
+            padding: 0 18px;
+            li {
+                list-style-type: '🔹';
+                padding-inline-start: 1ch;
+            }
+        }
+        code {
+            width: 100%;
+            background: #252b33;
+            color: #fff;
+            padding: 10px;
+            display: block;
+            text-align: left;
+            direction: ltr;
+            border-radius: 4px;
+            margin: 5px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #003cff;
+        }
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        p {
+            margin: 10px 0;
+            width: 100%;
+        }
+        img {
+            width: 100%;
+            object-fit: cover;
+            border-radius: 7px;
+        }
+        padding-bottom: 5px;
+    }
+    .like_button,
+    form {
+        display: inline-block;
+    }
+    .like_button {
+        cursor: pointer;
+        background: transparent;
+        border: none;
+    }
 }
+
 @media screen and (min-width: 1250px) {
-	#view_article .cover {
-		height: 600px;
-	}
+    #view_article .cover {
+        height: 600px;
+    }
 }
+
 @media screen and (max-width: 1250px) {
-	#view_article .cover {
-		height: 500px;
-	}
+    #view_article .cover {
+        height: 500px;
+    }
 }
+
 @media screen and (max-width: 800px) {
-	#view_article .cover {
-		height: 400px;
-	}
+    #view_article .cover {
+        height: 400px;
+    }
 }
+
 @media screen and (max-width: 600px) {
-	#view_article .cover {
-		height: 300px;
-	}
+    #view_article .cover {
+        height: 300px;
+    }
 }
-.comments{
-	.header{
-		margin-bottom: 35px;
-	}
-	.send_comment{
-		margin-bottom: 10px;
-		.header{
-			margin-bottom: 0;
-			margin-top: 10px;
-		}
-		form{
-			width: 100%;
-			.input{
-				background: transparent;
-			}
-		}
-	}
-	.comment{
-		margin-bottom: 50px;
-		position: relative;
-		width: 100%;
-		background: #fff;
-		border-radius: 5px;
-		display: block;
-		padding: 10px;
-		text-align: start;
-		direction: rtl;
-		min-height: 50px;
-		text-decoration: none;
-		padding-top: 0;
-		color: #000;
-		.sender{
-			position: absolute;
-			top: -25px;
-    		right: 0;
-			padding: 0 3px;
-			font-size: 16px;
-		}
-		.datetime{
-			position: absolute;
-			bottom: -12px;
-			left: 0;
-			padding: 0 3px;
-			font-size: 9px;
-			font-family: sans-serif;
-			color: #777;
-		}
-		.content{
-			padding: 0 10px;
-			padding-top: 15px;
-			font-size: 14px;
-			display: block;
-		}
-		.toolbar{
-			position: absolute;
-			left: 0px;
-			top: -25px;
-			display: flex;
-			.link{
-				display: inline-block;
-				margin: 0 5px;
-				font-size: 13px;
-			}
-		}
-	}
+
+.comments {
+    .header {
+        margin-bottom: 35px;
+    }
+    .send_comment {
+        margin-bottom: 10px;
+        .header {
+            margin-bottom: 0;
+            margin-top: 10px;
+        }
+        form {
+            width: 100%;
+            .input {
+                background: transparent;
+            }
+        }
+    }
+    .comment {
+        margin-bottom: 50px;
+        position: relative;
+        width: 100%;
+        background: #fff;
+        border-radius: 5px;
+        display: block;
+        padding: 10px;
+        text-align: start;
+        direction: rtl;
+        min-height: 50px;
+        text-decoration: none;
+        padding-top: 0;
+        color: #000;
+        .sender {
+            position: absolute;
+            top: -25px;
+            right: 0;
+            padding: 0 3px;
+            font-size: 16px;
+        }
+        .datetime {
+            position: absolute;
+            bottom: -12px;
+            left: 0;
+            padding: 0 3px;
+            font-size: 9px;
+            font-family: sans-serif;
+            color: #777;
+        }
+        .content {
+            padding: 0 10px;
+            padding-top: 15px;
+            font-size: 14px;
+            display: block;
+        }
+        .toolbar {
+            position: absolute;
+            left: 0px;
+            top: -25px;
+            display: flex;
+            .link {
+                display: inline-block;
+                margin: 0 5px;
+                font-size: 13px;
+            }
+        }
+    }
 }
