--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -12,6 +12,7 @@ Samim: Other;
     box-sizing: border-box;
     user-select: none;
 }
+
 body {
     background: #edeef0;
     font-family: "Poppins", "Samim";
@@ -24,18 +25,20 @@ body {
         font-size: 16px;
         transition: 0.3s ease;
         cursor: pointer;
-        &.link-danger{
+        &.link-danger {
             color: rgb(255, 11, 11);
         }
-        &.link-general{
+        &.link-general {
             color: #003cff;
         }
     }
 }
+
 .turbolinks-progress-bar {
     height: 3px;
     background-color: #003cff;
 }
+
 #header {
     position: fixed;
     z-index: 70;
@@ -75,12 +78,13 @@ body {
             top: 1px;
             padding-right: 5px;
         }
-        .btn{
+        .btn {
             display: inline-block;
         }
     }
 }
-#toggle_menu_button{
+
+#toggle_menu_button {
     cursor: pointer;
     position: absolute;
     right: 19px;
@@ -91,7 +95,7 @@ body {
     padding: 3px;
     padding-top: 2px;
     z-index: 85;
-    span{
+    span {
         width: 100%;
         height: 4px;
         display: block;
@@ -99,28 +103,31 @@ body {
         margin: 7px 0;
     }
 }
- @media screen and (min-width: 700px) {
-    .navbar{
+
+@media screen and (min-width: 700px) {
+    .navbar {
         display: flex;
     }
-    #bottom_navigator{
+    #bottom_navigator {
         display: none;
     }
 }
+
 @media screen and (max-width: 700px) {
-    .navbar{
+    .navbar {
         display: none;
     }
-    #header #brand{
+    #header #brand {
         width: 100%;
         text-align: center;
         left: 0;
     }
-    #bottom_navigator{
+    #bottom_navigator {
         display: block;
     }
 }
-#bottom_navigator{
+
+#bottom_navigator {
     position: fixed;
     width: 100%;
     right: 0;
@@ -129,44 +136,42 @@ body {
     height: 65px;
     background: #252b33;
     z-index: 80;
-    #bottom_navigator_nav{
+    #bottom_navigator_nav {
         display: flex;
         width: 100%;
         height: 100%;
         text-align: center;
         justify-content: space-around;
         align-items: center;
-        a{
+        a {
             color: #dadada;
         }
-        .active{
+        .active {
             color: #003cff;
         }
-        .item{
+        .item {
             width: 80px;
-            .icon{
+            .icon {
                 position: relative;
                 top: 6px;
                 font-size: 24px;
             }
-            .text{
+            .text {
                 position: relative;
                 bottom: 3px;
                 font-size: 13px;
             }
-            &.active{
-                
-            }
-            &.item-center{
+            &.active {}
+            &.item-center {
                 color: #fff;
-                &.active{
+                &.active {
                     color: #fff;
                 }
                 position: relative;
                 top: -34px;
                 background: #003cff;
                 border-radius: 17px;
-                .icon{
+                .icon {
                     top: 12px;
                 }
                 --size: 50px;
@@ -176,9 +181,11 @@ body {
         }
     }
 }
+
 #page_content {
     margin-top: $header_height;
 }
+
 .sepa {
     position: relative;
     content: "";
@@ -188,12 +195,14 @@ body {
     height: 1px;
     background: #ddd;
 }
+
 .link_row {
     .link {
         width: 100%;
         display: block;
     }
 }
+
 h1,
 h2,
 h3,
@@ -206,6 +215,7 @@ small {
     margin: 0;
     padding: 0;
 }
+
 .container {
     position: relative;
     top: $header_height;
@@ -214,17 +224,19 @@ small {
         font-size: 27px;
         margin-bottom: 10px;
         padding-bottom: 5px;
-        &.bb{
+        &.bb {
             border-bottom: 1px solid #ddd;
         }
     }
     margin-bottom: 60px;
 }
+
 @media screen and (max-width: 1100px) {
     .container {
         padding: 20px 20px;
     }
 }
+
 .inline_avatar {
     position: relative;
     .avatar,
@@ -244,22 +256,25 @@ small {
         margin-right: 7px;
     }
 }
-.flex_row{
+
+.flex_row {
     display: flex;
     flex: 1 0;
-    div{
+    div {
         width: 100%;
     }
 }
+
 @media screen and (max-width: 700px) {
     .flex_row {
         display: block;
-        div{
+        div {
             width: 100%;
         }
     }
 }
-.center_recaptcha{
+
+.center_recaptcha {
     height: 76px;
     position: relative;
     left: 50%;
@@ -267,4 +282,43 @@ small {
     margin: 15px 0;
     display: block;
     width: max-content;
+}
+
+.md_to_html {
+    ul {
+        padding: 0 18px;
+        li {
+            list-style-type: '🔹';
+            padding-inline-start: 1ch;
+        }
+    }
+    code {
+        width: 100%;
+        background: #252b33;
+        color: #fff;
+        padding: 10px;
+        display: block;
+        text-align: left;
+        direction: ltr;
+        border-radius: 4px;
+        margin: 5px 0;
+    }
+    a {
+        text-decoration: none;
+        color: #003cff;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    p {
+        margin: 10px 0;
+        width: 100%;
+    }
+    img {
+        width: 100%;
+        object-fit: cover;
+        border-radius: 7px;
+    }
 }
