--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
 								<%= image_tag art.image.url, :onload => 'imagePreloader(this)' %>
 							</div>
 							<h3 class='title'><%= art.header %></h3>
-							<p class='desc'><%= art.cover_text %></p>
+							<p class='desc'><%= art.cover_text[0, 120] %>...</p>
 							<div class='footer' style='display: flex; justify-content: space-between' dir='ltr'>
 								<div>
 									<span class='author'>
