--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -88,6 +88,53 @@
 }
 
 .checkbox {
+    display: block;
+    position: relative;
+    padding-right: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 14px;
+    user-select: none;
+    input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+    }
+    .checkmark {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 25px;
+        width: 25px;
+        border-radius: 6px;
+        border: 2px solid #ddd;
+        background-color: #fff;
+        &:after {
+            content: "";
+            position: absolute;
+            display: none;
+        }
+    }
+    input:checked~.checkmark {
+        border: none;
+        background-color: #003cff;
+    }
+    input:checked~.checkmark:after {
+        display: block;
+    }
+    .checkmark:after {
+        left: 10px;
+        top: 5.5px;
+        width: 4px;
+        height: 9px;
+        border: solid white;
+        border-width: 0 2px 2px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
     a {
         color: #003cff;
     }
