--- a/app/views/dashboard/edit_article.html.erb
+++ b/app/views/dashboard/edit_article.html.erb
@@ -1,3 +1,14 @@
+<% unless flash[:edit_article_success].nil? %>
+    <div class="alert alert-success" style="margin-bottom: 20px; display: block">
+        <button onclick="close_popup_alert_box(this)" class="close_button btn-none">
+            <ion-icon name="close-outline"></ion-icon>
+        </button>
+        <div class="alert_content">
+            <%= flash[:edit_article_success] %>
+        </div>
+    </div>        
+<% end %>
+
 <div class="content_box">
     <h4 class="header">ویرایش مقاله</h4>
 
@@ -13,10 +24,6 @@
                             <div class="item"><%= e %></div>
                         </div>
                     <% end %>
-                <% end %>
-
-                <% unless flash[:edit_article_success].nil? %>
-                    <span class="success_message"><%= flash[:edit_article_success] %></span>
                 <% end %>
             </div>
 
