bug fix: goto_down button id changed

--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -17,7 +17,7 @@
         </div>
     <% end %>
 
-    <a href="#home_intro" id="goto_down_button" class="btn btn-none">
+    <a href="#home_content" id="goto_down_button" class="btn btn-none">
         <ion-icon name="arrow-down-outline"></ion-icon>
     </a>
 </div>
